# openwrt-lede

./: README.md  diy-part1.sh  diy-part2.sh  local_builder.sh  origin.config  pyproject.toml
.github/workflows/: build-openwrt.yml  shell-build-openwrt.yml
config/: origin.config
script/: diy-part1.sh  diy-part2.sh  local_builder.sh
