[tool.poetry]
name = "openwrt-lede"
version = "0.1.0"
description = ""
authors = ["Madray Haven <sgpublic2002@gmail.com>"]
readme = "README.md"
packages = [{include = "openwrt_lede"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
